Include vite-env.d.ts in tsconfig for ImportMeta types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,12 +12,10 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "strict": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./*"],
-      "./types/*": ["types/*"],
-      "./services/*": ["services/*"]
-    }
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*", "types/**/*", "services/**/*"]
+  "include": ["vite-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
