Remove missing tsconfig.node.json reference

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["vite-env.d.ts", "**/*.ts", "**/*.tsx"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["vite-env.d.ts", "**/*.ts", "**/*.tsx"]
 }
